test/classes/ferguson/coerce-const-ref.good
coerce-const-ref.chpl:16: error: Cannot coerce argument for const ref intent
